k8s/bando/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bando
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /api/v1**
            pathType: ImplementationSpecific
            backend:
              service:
                name: gw
                port:
                  number: 80
          - path: /pv/products*
            pathType: ImplementationSpecific
            backend:
              service:
                name: products
                port:
                  number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: front
                port:
                  number: 80
